Dimension blacklist for Intervention and Rift